# mcat-cli

./: README.md  pyproject.toml
.github/workflows/: changelog.yml  publish.yml
docs/: design.md  integration-tests.md
skills/mcat/: SKILL.md
src/mcat_cli/: __init__.py  app.py  auth.py  main.py  mcp.py  proxy.py
src/mcat_cli/util/: __init__.py  atomic_files.py  auth_info.py  auth_state.py  client_info.py  common.py  dotenv_format.py  env_file.py  files.py  json_file.py  json_input.py  json_value_file.py  key_ref.py  logging.py  oauth_discovery.py  session_info.py
tests/: test_app_json_args.py  test_auth_authorization_code.py  test_auth_info.py  test_auth_state.py  test_client_info.py  test_dotenv_format.py  test_env_file.py  test_json_file.py  test_json_input.py  test_json_value_file.py  test_key_ref_token_file.py  test_mcp_unix.py  test_oauth_discovery.py  test_proxy.py  test_session_info.py
tests/integration/: __init__.py  test_live_mcp_servers.py
