[project]
name = "mcat-cli"
version = "0.1.5"
description = "The model-context access tool for agents and humans"
readme = "README.md"
authors = [
    { name = "Brice Yan", email = "briceyan3.0@gmail.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "model context protocol",
    "progressive disclosure",
    "agent",
    "cli",
    "oauth",
    "tool calling",
    "resources",
    "mcp debugging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
urls = { Repository = "https://github.com/briceyan/mcat-cli" }
requires-python = ">=3.11"
dependencies = [
    "json5>=0.12,<1.0",
    "typer>=0.12,<1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11,<1.0",
]

[project.scripts]
mcat = "mcat_cli.main:main"
mcat-cli = "mcat_cli.main:main"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
