[project]
name = "mcat-cli"
version = "0.1.7"
description = "The model-context access tool for agents and humans"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "mcp",
    "progressive disclosure",
    "mcp debugging",
    "client registration",
    "oauth",
]
requires-python = ">=3.11"
dependencies = [
    "dataclasses-json>=0.6,<1.0",
    "json5>=0.12,<1.0",
    "python-dotenv>=1.0,<2.0",
    "typer>=0.12,<1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11,<1.0",
    "ty>=0.0.19",
]

[project.scripts]
mcat = "mcat_cli.main:main"
mcat-cli = "mcat_cli.main:main"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
